После настройки сообщений об ошибках

--- a/conf/mysite.conf
+++ b/conf/mysite.conf
@@ -16,9 +16,19 @@
 		Options Indexes
 	</Directory>
 	
+	<Directory "D:\mysite\errors">
+		Require all granted
+		Options Indexes
+	</Directory>
+	
 	#ErrorLog
 	ErrorLog "D:\mysite\logs\error.log"
 	
 	#CustomLog
 	CustomLog "D:\mysite\logs\access.log" common
+	
+	Alias "/err" "D:\mysite\errors"
+	
+	ErrorDocument 404 "/err/404.html"
+	
 </VirtualHost>
