--- a/conf/mysite.conf
+++ b/conf/mysite.conf
@@ -14,6 +14,7 @@
 	<Directory "D:\mysite\htdocs">
 		Require all granted
 		Options Indexes
+		AllowOverride All
 	</Directory>
 	
 	<Directory "D:\mysite\errors">
