изменения до регулярок

--- a/conf/mysite.conf
+++ b/conf/mysite.conf
@@ -13,13 +13,58 @@
 	#Настройки папки
 	<Directory "D:\mysite\htdocs">
 		Require all granted
-		Options Indexes
+		Options Indexes FollowSymlinks
 		AllowOverride All
 	</Directory>
 	
 	<Directory "D:\mysite\errors">
 		Require all granted
-		Options Indexes
+		Options Indexes FollowSymlinks
+	</Directory>
+	
+	#ErrorLog
+	ErrorLog "D:\mysite\logs\error.log"
+	
+	#CustomLog
+	CustomLog "D:\mysite\logs\access.log" common
+	
+	Alias "/err" "D:\mysite\errors"
+	
+	ErrorDocument 404 "/err/404.html"
+	
+</VirtualHost>
+
+
+# Виртуальный хост mysite.local SSL
+
+Listen 443
+
+<VirtualHost 127.0.0.1:443>
+	#SSL
+	SSLEngine On
+	SSLCertificateFile d:/mysite/conf/mysite.cert
+	SSLCertificateKeyFile d:/mysite/conf/mysite.key
+
+	#Имя сервера
+	ServerName mysite.local
+	ServerAlias www.mysite.local info.mysite.local
+	
+	#Администратор
+	ServerAdmin yura.yushkevich@gmail.com
+	
+	#Корень сервера
+	DocumentRoot "D:\mysite\htdocs"
+	
+	#Настройки папки
+	<Directory "D:\mysite\htdocs">
+		Require all granted
+		Options Indexes FollowSymlinks
+		AllowOverride All
+	</Directory>
+	
+	<Directory "D:\mysite\errors">
+		Require all granted
+		Options Indexes FollowSymlinks
 	</Directory>
 	
 	#ErrorLog
